# compile_language

./: CMakeLists.txt  MyPassBBmerge_Report.md  Output.ll  dupe.ll  main.al  test.ram  test_binary.al  test_control_flow.al  test_dce.al  test_float.al  test_lexer_upgrade.ram  test_mixed.al  test_mypass.al  test_pass.ll  test_return_mismatch.ram  test_simple.ram  test_strict_assign.al  test_strict_assign_2.al  test_strict_return.al  test_strict_return_2.al  test_types.ram  test_vars.al
include/: MyPass.h  MyPassBBmerge.h  SEPass.h  ast.h  codegen.h  lexer.h  parser.h  sema.h  token.h  utils.h
lib/: CMakeLists.txt  MyPassBBmerge.cpp  Mypass.cpp  SEPass.cpp  codegen.cpp  compiler.cpp  lexer.cpp  parser.cpp
